<resources>
    <string name="app_name">Compass</string>
    <string name="launcher_sign_up">SIGN UP</string>
    <string name="launcher_login">LOG IN</string>
    <string name="launcher_compass_image_cd">Compass image</string>
    <string name="launcher_compass_logo_cd">Compass logo</string>
    <string name="launcher_de_soto_bridge_cd">Hernando DeSoto bridge</string>
    <string name="launcher_made_in_memphis">made in memphis</string>
    <string name="launcher_update_title">A new version is available</string>
    <string name="launcher_update_subtitle">Updates of the application improve support and fix issues. To continue using the application, please update.</string>
    <string name="launcher_update_get_it">Update</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="login_email_label">email address</string>
    <string name="login_password_label">password</string>
    <string name="login_email_error">Please enter a valid email</string>
    <string name="login_pass_error">Please enter a password</string>
    <string name="login_first_name_error">Please enter your first name</string>
    <string name="login_last_name_error">Please enter your last name</string>
    <string name="login_error">An error occurred when logging in</string>
    <string name="login_forgotten_password">Forgot password?</string>
    <string name="login_header_label">LOG IN</string>
    <string name="reset_password_header">RESET PASSWORD</string>
    <string name="reset_password_email">What\'s your email address?</string>
    <string name="reset_password_error_email">Please, introduce a valid email address</string>
    <string name="reset_password_error_request">Password recovery failed</string>
    <string name="reset_password_explanation">An email with a password recovery link will be sent to this address.</string>
    <string name="reset_password_reset">RESET</string>
    <string name="reset_password_icon_cd">Success icon</string>
    <string name="signup_password_mismatch_error">Passwords must match</string>
    <string name="signup_password_length_error">Password must be at least 5 characters</string>
    <string name="signup_first_name_label">first name</string>
    <string name="signup_last_name_label">last name</string>
    <string name="signup_first_name_hint">enter first name</string>
    <string name="signup_last_name_hint">enter last name</string>
    <string name="signup_confirm_password_label">re-enter password</string>
    <string name="signup_error">An error occurred when signing up</string>
    <string name="signup_header_label">CREATE YOUR ACCOUNT</string>
    <string name="signup_accept_terms">Creating an account indicates that you agree to our
        <a href="https://app.tndata.org/terms/">terms of service</a> and
        <a href="https://app.tndata.org/privacy/">privacy policy</a>.
    </string>
    <string name="tour_org_general_title">Organization</string>
    <string name="tour_org_general_description">Review this list and tap your organization name.</string>
    <string name="tour_org_skip_title">Skip</string>
    <string name="tour_org_skip_description">Tap here to omit this step.</string>
    <string name="tour_cat_general_title">Categories</string>
    <string name="tour_cat_general_description">Tap the card that describes what you want to do.</string>
    <string name="tour_cat_skip_title">Skip</string>
    <string name="tour_cat_skip_description">Tap here to omit this step.</string>
    <string name="tour_lib_general_title">Goal Library</string>
    <string name="tour_lib_general_description">Tap the card that describes what you want to do.</string>
    <string name="tour_lib_added_title">Goal library</string>
    <string name="tour_lib_added_description">You can choose more content or hit back to go to Compass.</string>
    <string name="tour_goal_add_title">Goal</string>
    <string name="tour_goal_add_description">Tap "SIGN ME UP" to begin receiving Compass tips.</string>
    <string name="tour_feed_general_title">Feed</string>
    <string name="tour_feed_general_description">This is your feed. Check in occasionally for tips and to track your progress.</string>
    <string name="tour_feed_up_next_title">Up next</string>
    <string name="tour_feed_up_next_description">This is a tip to help you succeed. Tap and read!</string>
    <string name="tour_feed_progress_title">Progress</string>
    <string name="tour_feed_progress_description">This is your daily progress. It helps you stay engaged with your success.</string>
    <string name="tour_feed_fab_title">More goals</string>
    <string name="tour_feed_fab_description">Tap the (+) button to browse for more goals.</string>
    <string name="tour_action_got_it_title">Action</string>
    <string name="tour_action_got_it_description">Tap here to keep track of your actions.</string>
    <string name="action_my_information">My information</string>
    <string name="action_my_awards">My awards</string>
    <string name="action_my_places">My places</string>
    <string name="action_my_priorities">My activities</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Feedback</string>
    <string name="action_support_share_title">Select your email client</string>
    <string name="action_support_subject">Compass Feedback</string>
    <string name="nav_drawer_action">Compass</string>
    <string name="fab_search_goals">Search goals</string>
    <string name="fab_browse_goals">Browse goals</string>
    <string name="fab_custom_goal">Create a goal</string>
    <string name="toast_streaks">Keep checking your notifications to keep your streaks alive!</string>
    <string name="feed_illustration_cd">Compass\' main illustration</string>
    <string name="my_activities_title">Customize my activities</string>
    <string name="choose_category_title">What interests you?</string>
    <string name="date_picker_confirmation_toast">Date set</string>
    <string name="time_picker_confirmation_toast">You have selected %1$s</string>
    <string name="recurrence_picker_confirmation_toast">Recurring schedule saved</string>
    <string name="reminder_failed">Failed to save reminder</string>
    <string name="onboarding_category_skip">skip</string>
    <string name="onboarding_category_finish">finish</string>
    <string name="goal_image_description">Goal</string>
    <string name="instrument_next">NEXT</string>
    <string name="onboarding_instrument_title">On-boarding profile</string>
    <string name="onboarding_instrument_description">These are quick questions that will help the app create a base of recommendations. These questions will become more granular through the survey cards as the user engages with the app over time.</string>
    <string name="onboarding_instrument_instructions">Tell Compass a few things about you.</string>
    <string name="organizations_header">Are you part of one of these Compass partners? (this step is optional).</string>
    <string name="list_explanation">What do you want to do? You can browse more goals inside the app.</string>
    <string name="trigger_default_action_title">Reminders for this action</string>
    <string name="trigger_switch_label">Enable reminders</string>
    <string name="trigger_time_picker_label">Select a time</string>
    <string name="trigger_date_picker_label">Select a date</string>
    <string name="trigger_recurrence_picker_label">Select repeat options</string>
    <string name="trigger_finished_label">DONE</string>
    <string name="library_goals_content_header">Compass can help you&#8230;</string>
    <string name="library_goal_title">%1$s</string>
    <string name="library_goal_yes">Sign me up</string>
    <string name="library_goal_no">Not now</string>
    <string name="library_detail_more_info">More info</string>
    <string name="dialog_enrollment_title">You\'re awesome</string>
    <string name="dialog_enrollment_content">Compass will check back in occasionally with activities that can help you reach your goal.</string>
    <string name="dialog_enrollment_ok">Got it</string>
    <string name="custom_goal_header">My goal is to&#8230;</string>
    <string name="custom_goal_create">Create</string>
    <string name="custom_goal_edit_cd">Edition mode toggle button</string>
    <string name="custom_goal_remove">Remove</string>
    <string name="custom_goal_remove_condensed">Remove</string>
    <string name="custom_action_list_header">Here\'s how I\'ll reach my goal</string>
    <string name="custom_action_list_sub_header">I will&#8230;</string>
    <string name="custom_action_list_create">Create</string>
    <string name="custom_action_trigger_cd">Enter trigger edition mode</string>
    <string name="custom_action_edit_cd">Open the edition dialog</string>
    <string name="custom_action_edit_dialog_title">Select an option</string>
    <string-array name="custom_action_edit_dialog_options">
        <item>Change the title</item>
        <item>Remove action</item>
    </string-array>
    <string name="custom_action_save_cd">Save the title of an action in edition mode</string>
    <string name="settings_general_title">General</string>
    <string name="settings_about_title">About</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_logout_summary">Signed in as %1$s</string>
    <string name="settings_logout_title">Sign out</string>
    <string name="settings_tos_title">Terms of Service</string>
    <string name="settings_privacy_title">Privacy Policy</string>
    <string name="settings_sources_title">Sources</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_notifications_sound_title">Sound</string>
    <string name="settings_notifications_vibration_title">Vibration</string>
    <string name="settings_notifications_light_title">Light</string>
    <string name="settings_notifications_notification_number_title">Daily notification limit</string>
    <string name="settings_notifications_notification_number_subtitle">Limit is ignored by high-priority notifications</string>
    <string name="settings_notifications_quiet_hours_title">Quiet hours</string>
    <string name="button_positive">DONE</string>
    <string name="button_negative">CANCEL</string>
    <string name="survey_default_option">Click to choose</string>
    <string name="goal_remove">Remove Goal</string>
    <string name="goal_remove_condensed">Remove</string>
    <string name="goal_removed_toast">Your goal has been removed</string>
    <string name="action_add_to_calendar">Add to Calendar</string>
    <string name="action_do_it_now">Do it now</string>
    <string name="action_snooze">Later</string>
    <string name="action_reschedule">Reschedule</string>
    <string name="action_got_it">Got it!</string>
    <string name="action_remove_behavior">Remove</string>
    <string name="action_view_goal">View goal activities</string>
    <string name="action_view_goal_condensed">Goal activities</string>
    <string name="action_trigger">Reschedule</string>
    <string name="action_disable_trigger">Disable reminder</string>
    <string name="action_completed_toast">You\'re awesome!</string>
    <string name="action_fetch_error">Couldn\'t load activity data</string>
    <string name="action_custom_title">Your reminder</string>
    <string name="action_detail_title">How will this help?</string>
    <string name="behavior_dialog_remove">Remove</string>
    <string name="card_welcome_title">Welcome to Compass</string>
    <string name="card_welcome_subtitle">You want good things for yourself. Compass helps you know your goals, do things to achieve them, and track your progress over time.</string>
    <string name="card_welcome_instructions"><i>Instructions</i>: Select a goal that Compass has recommended for you, or touch the big round button at the bottom right of the screen to discover your own goal.</string>
</resources>