<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="notification_pref_key_notification_settings"
        android:title="Notifications" >

        <CheckBoxPreference
            android:key="settings_notifications_sound"
            android:defaultValue="true"
            android:title="@string/settings_notifications_sound_title" />

        <CheckBoxPreference
            android:key="settings_notifications_vibration"
            android:defaultValue="true"
            android:title="@string/settings_notifications_vibration_title" />

        <CheckBoxPreference
            android:key="settings_notifications_light"
            android:defaultValue="true"
            android:title="@string/settings_notifications_light_title" />

        <org.tndata.android.compass.ui.NumberPickerPreference
            android:key="settings_notifications_daily_number"
            android:defaultValue="5"
            android:title="@string/settings_notifications_notification_number_title" />

        <org.tndata.android.compass.ui.QuietHoursPreference
            android:key="settings_notifications_quiet_hours"
            android:title="@string/settings_notifications_quiet_hours_title" />

    </PreferenceCategory>
</PreferenceScreen>
