<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reset_password_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset_password_email"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/reset_pass_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/login_email_hint"
            android:textColorHint="@color/light_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset_password_explanation"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                style="@style/FlatButton"
                android:id="@+id/reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_reset"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/reset_password_progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/reset_password_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </RelativeLayout>
    </LinearLayout>
</layout>
