<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_update_title"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/launcher_update_subtitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text_color" />

    </LinearLayout>

    <Button
        android:id="@+id/update_get_it"
        android:layout_margin="8dp"
        android:layout_gravity="end"
        android:text="@string/launcher_update_get_it"
        style="@style/FlatButton" />

</LinearLayout>