<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_goal_header"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/dark_text_color" />

        <EditText
            android:id="@+id/create_goal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textCapSentences"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text_color"/>

        <TextView
            android:id="@+id/create_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:enabled="false"
            android:text="@string/custom_goal_create"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text_color" />

        <ImageView
            android:id="@+id/create_goal_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_edit_white_36dp"
            android:tint="@color/black"
            android:visibility="gone"
            android:contentDescription="@string/custom_goal_edit_cd" />

    </LinearLayout>
</android.support.v7.widget.CardView>
